<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dausnotes.app.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.dausnotes.app.ui.notes.NotesFragment"
        android:label="@string/nav_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_pomodoro"
        android:name="com.dausnotes.app.ui.pomodoro.PomodoroFragment"
        android:label="@string/nav_pomodoro"
        tools:layout="@layout/fragment_pomodoro" />

</navigation>